# tauri-examples

./: .gitignore  index.html  package.json  tsconfig.eslint.json
src/: App.tsx  main.tsx  style.css  styles.css  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 20231228044218_create_table.sql
src-tauri/src/: main.rs  state.rs
src-tauri/src/process/: execute_command_json.rs  maybe_error.rs  mod.rs
src/components/: Clipboard.tsx  Notification.tsx  OS.tsx  ProcessListSidePanel.tsx
src/components/atoms/: ItemLabel.tsx  readonly.tsx
src/components/dialogs/: AskDialog.tsx  ConfirmDialog.tsx  MessageDialog.tsx  OpenDialog.tsx  SaveDialog.tsx
src/components/features/: Clipboard.tsx  Description.tsx  ExecuteCommand.tsx  ExecuteCommandJson.tsx  ProcessListSidePanel.tsx
src/components/features/dialogOperations/: OpenDialog.tsx  OpenFileDialog.tsx
src/components/features/dialogs/: AskDialog.tsx  ConfirmDialog.tsx  MessageDialog.tsx  OpenDialog.tsx  SaveDialog.tsx  utils.ts  utils.tsx
src/components/features/executeCommands/: MaybeError.tsx
src/components/features/fileOperations/: ReadFileContent.tsx
src/components/files/: ReadFileContent.tsx  WriteFileContent.tsx
src/components/layouts/: AppLayout.tsx
src/components/maps/: MapView.tsx  TileMaps.css  TileMaps.tsx
src/components/states/: DatabaseConnectionPool.tsx  StateManagement.tsx
src/hooks/: useCurrentProcess.ts
