[package]
name = "tauri-examples"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
dotenvy = "0.15.7"
tauri = { version = "1.5", features = [
    "os-all",
    "notification-all",
    "clipboard-all",
    "fs-all",
    "dialog-all",
    "shell-open",
    "path-all",
] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "migrate"] }
thiserror = "1.0.51"
tokio = { version = "1.35.1", features = ["macros"] }
futures = "0.3.30"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
